@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>1.8</java.version>
         <code.version>UTF-8</code.version>
         <project.build.sourceEncoding>${code.version}</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${code.version}</project.reporting.outputEncoding>
@@ -87,7 +87,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <release>11</release>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -103,9 +104,9 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <argLine>
-                        --illegal-access=permit
-                    </argLine>
+                    <!-- <argLine>
+                         &#45;&#45;illegal-access=permit
+                     </argLine>-->
                     <systemPropertyVariables>
                         <env>${env}</env>
                     </systemPropertyVariables>
